--- a/HouseRentingSystem/Views/Shared/_Layout.cshtml
+++ b/HouseRentingSystem/Views/Shared/_Layout.cshtml
@@ -19,6 +19,15 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        @if (this.User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item ">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Mine">My House</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Add">Add House</a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
