--- a/HouseRentingSystem/Views/Shared/_Layout.cshtml
+++ b/HouseRentingSystem/Views/Shared/_Layout.cshtml
@@ -21,6 +21,10 @@
                     <ul class="navbar-nav flex-grow-1">
                         @if (this.User.Identity.IsAuthenticated)
                         {
+
+                            <li class="nav-item ">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="All">All Houses</a>
+                            </li>
                             <li class="nav-item ">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Mine">My House</a>
                             </li>
@@ -28,9 +32,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Add">Add House</a>
                             </li>
                         }
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                       
                        
                     </ul>
                     <partial name="_LoginPartial" />
