--- a/HouseRentingSystem/Views/Shared/Components/MainMenuComponent/Default.cshtml
+++ b/HouseRentingSystem/Views/Shared/Components/MainMenuComponent/Default.cshtml
@@ -1,8 +1,13 @@
-﻿<ul class="navbar-nav flex-grow-1">
+﻿@inject IAgentService agentService
+<ul class="navbar-nav flex-grow-1">
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-    </li>
+    @if (await agentService.ExistsByIdAsync(User.Id()))
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </li>
+    }
+   
 </ul>
