--- a/HouseRentingSystem/Views/_ViewImports.cshtml
+++ b/HouseRentingSystem/Views/_ViewImports.cshtml
@@ -4,4 +4,7 @@
 @using HouseRentingSystem.Core.Models.House
 @using HouseRentingSystem.Core.Models.Agent
 @using HouseRentingSystem.Core.Extensions
+@using HouseRentingSystem.Core.Contracts
+@using HouseRentingSystem.Core.Contracts.House
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
