--- a/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
+++ b/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@model HouseServiceModel
-
+@inject IAgentService agentService
+@inject IHouseService houseService
 <div class="col-md-4">
     <div class="card mb-3">
         <img class="card-img-top" src="@Model.ImageUrl" alt="House Image">
@@ -16,25 +17,30 @@
                asp-route-information="@Model.GetInformation()" class="btn btn-success">Details</a>
             @if (this.User.Identity.IsAuthenticated)
             {
-                <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id"
+                if (await houseService.HasAgentWithId(Model.Id, User.Id()))
+             {
+                    <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id"
                class="btn btn-warning">Edit</a>
-                <a asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id"
+                    <a asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id"
                class="btn btn-danger">Delete</a>
+                
+             }
                 <p></p>
-                @if (!Model.IsRentet)
+                @if (!Model.IsRentet && await agentService.ExistsByIdAsync(User.Id()) == false)
                 {
                     <form class="input-group-sm" asp-controller="House"
                   asp-action="Rent" asp-route-id="@Model.Id" method="post">
                         <input class="btn btn-primary" type="submit" value="Rent" />
                     </form>
                 }
-                else
+                else if(await houseService.IsRentedByUserWithId(Model.Id,User.Id()))
                 {
                     <form asp-controller="House" asp-action="Leave"
                   asp-route-id="@Model.Id" method="post">
                         <input class="btn btn-primary" type="submit" value="Leave" />
                     </form>
                 }
+             
             }
         </div>
     </div>
