--- a/HouseRentingSystem/Views/Shared/_LoginPartial.cshtml
+++ b/HouseRentingSystem/Views/Shared/_LoginPartial.cshtml
@@ -3,19 +3,32 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @inject IAgentService agentService
+@{
+    string userName = string.Empty;
+    if (SignInManager.IsSignedIn(User))
+    {
+        var user =await UserManager.FindByIdAsync(User.Id());
+        userName = $"{user.FirstName} {user.LastName}";
+    }
+}
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
+
         if (await agentService.ExistsByIdAsync(User.Id())==false) 
         {
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Agent" asp-action="Become">Become Agent</a>
             </li>
         }
-   
-    <li class="nav-item">
-       <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-    </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @userName!</a>
+        </li>
+     <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
+        </li>
+    
+      
 }
 else
 {
