--- a/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
+++ b/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
@@ -17,7 +17,7 @@
                asp-route-information="@Model.GetInformation()" class="btn btn-success">Details</a>
             @if (this.User.Identity.IsAuthenticated)
             {
-                if (await houseService.HasAgentWithId(Model.Id, User.Id()))
+                if (await houseService.HasAgentWithId(Model.Id, User.Id())||User.IsAdmin())
              {
                     <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id"
                class="btn btn-warning">Edit</a>
@@ -26,7 +26,7 @@
                 
              }
                 <p></p>
-                @if (!Model.IsRentet && await agentService.ExistsByIdAsync(User.Id()) == false)
+                @if (!Model.IsRentet && (await agentService.ExistsByIdAsync(User.Id()) == false || User.IsAdmin()))
                 {
                     <form class="input-group-sm" asp-controller="House"
                   asp-action="Rent" asp-route-id="@Model.Id" method="post">
